--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -204,6 +204,7 @@
     <string name="large">Groß</string>
     <string name="extra_large">Sehr groß</string>
     <string name="password_protect_hidden_items">Verstecktes mit Muster/PIN schützen</string>
+    <string name="keep_last_modified">Keep old last-modified value at file copy/move/rename</string>
 
     <!-- About -->
     <string name="about">Über</string>
