--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -204,6 +204,7 @@
     <string name="large">Groot</string>
     <string name="extra_large">Extra groot</string>
     <string name="password_protect_hidden_items">Verborgen items met wachtwoord beveiligen</string>
+    <string name="keep_last_modified">Datum laatst gewijzigd behouden bij bestandsoperaties</string>
 
     <!-- About -->
     <string name="about">Over</string>
