--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -204,6 +204,7 @@
     <string name="large">大</string>
     <string name="extra_large">巨大</string>
     <string name="password_protect_hidden_items">使用密码保护隐藏项</string>
+    <string name="keep_last_modified">Keep old last-modified value at file copy/move/rename</string>
 
     <!-- About -->
     <string name="about">关于</string>
