--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -140,7 +140,7 @@
     <string name="unhide_folder">Mostrar pasta</string>
     <string name="temporarily_show_hidden">Mostrar ocultas temporariamente</string>
     <string name="stop_showing_hidden">Não mostrar multimédia oculta</string>
-    <string name="maximum_share_reached">You cannot share this much content at once</string>
+    <string name="maximum_share_reached">Não pode partilhar tantas coisas ao mesmo tempo</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar por</string>
@@ -204,7 +204,7 @@
     <string name="large">Grande</string>
     <string name="extra_large">Muito grande</string>
     <string name="password_protect_hidden_items">Password protect hidden item visibility</string>
-    <string name="keep_last_modified">Keep old last-modified value at file copy/move/rename</string>
+    <string name="keep_last_modified">Manter dados da última modificação ao copiar/mover/renomear</string>
 
     <!-- About -->
     <string name="about">Acerca</string>
