adding autofittextview license

--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -243,4 +243,5 @@
     <string name="pattern_title">PatternLockView (Schutz mit Muster)</string>
     <string name="reprint_title">Reprint (Schutz mit Fingerabdruck)</string>
     <string name="gif_drawable_title">Gif Drawable (Laden von GIFs)</string>
+    <string name="autofittextview_title">AutoFitTextView (resizing text)</string>
 </resources>
