--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -242,4 +242,5 @@
     <string name="pattern_title">PatternLockView (pattern protection)</string>
     <string name="reprint_title">Reprint (fingerprint protection)</string>
     <string name="gif_drawable_title">Gif Drawable (loading GIFs)</string>
+    <string name="autofittextview_title">AutoFitTextView (resizing text)</string>
 </resources>
