--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -243,4 +243,5 @@
     <string name="pattern_title">PatternLockView (sequenza di protezione)</string>
     <string name="reprint_title">Reprint (protezione impronta)</string>
     <string name="gif_drawable_title">Gif Drawable (caricamento GIF)</string>
+    <string name="autofittextview_title">AutoFitTextView (resizing text)</string>
 </resources>
