--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -247,4 +247,5 @@
     <string name="pattern_title">PatternLockView (ochrona danych wzorem)</string>
     <string name="reprint_title">Reprint (ochrona danych odciskiem palca)</string>
     <string name="gif_drawable_title">Gif Drawable (ładowanie GIFów)</string>
+    <string name="autofittextview_title">AutoFitTextView (resizing text)</string>
 </resources>
