--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -245,4 +245,5 @@
     <string name="pattern_title">PatternLockView (защита графическим ключом)</string>
     <string name="reprint_title">Reprint (защита по отпечатку пальца)</string>
     <string name="gif_drawable_title">Gif Drawable (loading GIFs)</string>
+    <string name="autofittextview_title">AutoFitTextView (resizing text)</string>
 </resources>
