--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -247,4 +247,5 @@
     <string name="pattern_title">PatternLockView (ochrana vzorom)</string>
     <string name="reprint_title">Reprint (ochrana odtlačkom prsta)</string>
     <string name="gif_drawable_title">Gif Drawable (zobrazovanie GIF)</string>
+    <string name="autofittextview_title">AutoFitTextView (text meniaci veľkosť)</string>
 </resources>
