adding Robolectric and Espresso licences

--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -248,4 +248,6 @@
     <string name="reprint_title">Reprint (ochrana odtlačkom prsta)</string>
     <string name="gif_drawable_title">Gif Drawable (zobrazovanie GIF)</string>
     <string name="autofittextview_title">AutoFitTextView (text meniaci veľkosť)</string>
+    <string name="robolectric_title">Robolectric (testovací framework)</string>
+    <string name="espresso_title">AutoFitTextView (testovací pomocník)</string>
 </resources>
