--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -244,4 +244,6 @@
     <string name="reprint_title">Reprint (fingerprint protection)</string>
     <string name="gif_drawable_title">Gif Drawable (loading GIFs)</string>
     <string name="autofittextview_title">AutoFitTextView (resizing text)</string>
+    <string name="robolectric_title">Robolectric (testing framework)</string>
+    <string name="espresso_title">AutoFitTextView (testing helper)</string>
 </resources>
