--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -248,4 +248,6 @@
     <string name="reprint_title">Reprint (ochrona danych odciskiem palca)</string>
     <string name="gif_drawable_title">Gif Drawable (ładowanie GIFów)</string>
     <string name="autofittextview_title">AutoFitTextView (resizing text)</string>
+    <string name="robolectric_title">Robolectric (testing framework)</string>
+    <string name="espresso_title">AutoFitTextView (testing helper)</string>
 </resources>
