--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -246,4 +246,6 @@
     <string name="reprint_title">Reprint (защита по отпечатку пальца)</string>
     <string name="gif_drawable_title">Gif Drawable (loading GIFs)</string>
     <string name="autofittextview_title">AutoFitTextView (resizing text)</string>
+    <string name="robolectric_title">Robolectric (testing framework)</string>
+    <string name="espresso_title">AutoFitTextView (testing helper)</string>
 </resources>
