fix Espresso license title

--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -247,5 +247,5 @@
     <string name="gif_drawable_title">Gif Drawable (loading GIFs)</string>
     <string name="autofittextview_title">AutoFitTextView (resizing text)</string>
     <string name="robolectric_title">Robolectric (testing framework)</string>
-    <string name="espresso_title">AutoFitTextView (testing helper)</string>
+    <string name="espresso_title">Espresso (testing helper)</string>
 </resources>
