--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -249,5 +249,5 @@
     <string name="gif_drawable_title">Gif Drawable (zobrazovanie GIF)</string>
     <string name="autofittextview_title">AutoFitTextView (text meniaci veľkosť)</string>
     <string name="robolectric_title">Robolectric (testovací framework)</string>
-    <string name="espresso_title">AutoFitTextView (testovací pomocník)</string>
+    <string name="espresso_title">Espresso (testovací pomocník)</string>
 </resources>
