--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -245,5 +245,5 @@
     <string name="gif_drawable_title">Gif Drawable (Laden von GIFs)</string>
     <string name="autofittextview_title">AutoFitTextView (resizing text)</string>
     <string name="robolectric_title">Robolectric (testing framework)</string>
-    <string name="espresso_title">AutoFitTextView (testing helper)</string>
+    <string name="espresso_title">Espresso (testing helper)</string>
 </resources>
