--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -224,7 +224,8 @@
     <string name="gruveo">Bist du auf der Suche nach einfachen und anonymen Videoanrufen? Probiere meine anderen Apps aus</string>
     <string name="app_version">App Version: %1$s</string>
     <string name="device_os">Betriebssystem: %1$s</string>
-    <string name="donate_please">Hey,\n\nscheint als ob diese App nun schon eine Weile in Gebrauch wäre.\n\nIst dir bewusst, dass hinter ihr kein größeres Unternehmen steht? Ihre Entwicklung kostet Zeit, und ich möchte sie werbefrei erhalten, daher würde ich Unterstützung sehr schätzen.\n\nDu kannst mich unterstützen mittels der Kauf-App Simple Thank You, durch Geldtransfer über Paypal oder mittels Senden von Bitcoins.\n\nMehr Info auf http://simplemobiletools.com/donate.\n\nVielen Dank!</string>
+    <string name="donate_please">Hello,\n\nhope you are enjoying the app. It contains no ads, so please support its development by purchasing the <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a> app, it will also prevent this dialog from showing up again.\n\nYou can find more donating options <a href="http://simplemobiletools.com/donate">here</a>.\n\nThank you!</string>
+    <string name="purchase">Purchase</string>
 
     <!-- License -->
     <string name="notice">Diese App nutzt die folgenden Drittanbieterbilbiotheken, die mein Leben einfacher machen. Danke.</string>
