--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -224,7 +224,8 @@
     <string name="gruveo">Stai cercando un\'app semplice e anonima per videochiamate? Prova l\'altro mio progetto</string>
     <string name="app_version">Versione app: %1$s</string>
     <string name="device_os">OS dispositivo: %1$s</string>
-    <string name="donate_please">Hey,\n\npare che tu stia usando questa app da un po\' di tempo.\n\nLo sapevi che non è sostenuta da nessuna grande azienda? Svilupparla richiede tempo e voglio mantenerla senza pubblicità, perciò il tuo supporto sarebbe apprezzato.\n\nPuoi aiutarmi acquistando l\'app Simple Thank You, oppure inviando denaro via Paypal o Bitcoin.\n\nMaggiori informazioni su http://simplemobiletools.com/donate.\n\nGrazie!</string>
+    <string name="donate_please">Hello,\n\nhope you are enjoying the app. It contains no ads, so please support its development by purchasing the <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a> app, it will also prevent this dialog from showing up again.\n\nYou can find more donating options <a href="http://simplemobiletools.com/donate">here</a>.\n\nThank you!</string>
+    <string name="purchase">Purchase</string>
 
     <!-- License -->
     <string name="notice">Questa app usa le seguenti librerie di terze parti per semplificarmi la vita. Grazie.</string>
