--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -228,7 +228,8 @@
     <string name="gruveo">Nie szukasz może prostej i anonimowej w swych działaniach aplikacji do wideorozmów? Wypróbuj mój inny projekt:</string>
     <string name="app_version">Wersja aplikacji: %1$s</string>
     <string name="device_os">System: %1$s</string>
-    <string name="donate_please">Hej,\n\nZdaje się, że korzysatasz z tej aplikacji już jakiś czas.\n\nCzy wiesz, że nie jest ona dziełem wielgachnej korporacji? Rozwijanie tej aplikacji zajmuje sporo czasu i chcemy, żeby nie zawierała ona reklam, więc jakiekolwiek wsparcie jest bardzo mile widziane.\n\nMożesz nas wesprzeć kupując aplikację Simple Thank You, albo wysyłając nam pieniążki przez PayPala. Bitcoinami też nie pogardzimy.\n\nWięcej informacji: http://simplemobiletools.com/donate.\n\nDzięki!</string>
+    <string name="donate_please">Hello,\n\nhope you are enjoying the app. It contains no ads, so please support its development by purchasing the <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a> app, it will also prevent this dialog from showing up again.\n\nYou can find more donating options <a href="http://simplemobiletools.com/donate">here</a>.\n\nThank you!</string>
+    <string name="purchase">Purchase</string>
 
     <!-- License -->
     <string name="notice">Aplikacja korzysta z następujących bibliotek innych firm:</string>
