--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -228,7 +228,8 @@
     <string name="gruveo">Hľadáte aplikáciu na jednoduché a anonymné videohovory? Skúste môj druhý projekt</string>
     <string name="app_version">Verzia aplikácie: %1$s</string>
     <string name="device_os">Operačný systém zariadenia: %1$s</string>
-    <string name="donate_please">Čauko,\n\nzdá sa, že túto aplikáciu používaš už nejaký čas.\n\nVedel si, že nie je financovaná žiadnou veľkou firmou? Jej vývoj zaberá čas a nechcem pridávať reklamy, takže by tvoja pomoc bola vítaná.\n\nMôžeš ma podporiť jednak kúpou platenej aplikácie Simple Thank You, poslaním peňazí cez Paypal, alebo poslaním kryptomien.\n\nViac info na http://simplemobiletools.com/donate.\n\nĎakujem!</string>
+    <string name="donate_please">Zdravím,\n\ndúfam, že sa ti moja apka páči. Neobsahuje žiadne reklamy, podpor prosím jej vývoj zakúpením aplikácie <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Jednoduché ďakujem</a>. Zaručí to aj to, že tento dialóg už neuvidíš.\n\nViac možností podpory nájdeš <a href="http://simplemobiletools.com/donate">tu</a>.\n\nĎakujem!</string>
+    <string name="purchase">Zakúpiť</string>
 
     <!-- License -->
     <string name="notice">Táto aplikácia používa na uľahčenie práce nasledovné knižnice tretích strán. Ďakujeme.</string>
