--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -224,7 +224,8 @@
     <string name="gruveo">Letar du efter en enkel app för anonyma videosamtal? Prova mitt andra projekt</string>
     <string name="app_version">Appversion: %1$s</string>
     <string name="device_os">Enhetens operativsystem: %1$s</string>
-    <string name="donate_please">Hej,\n\ndet verkar som att du har använt den här appen ganska länge nu.\n\nVisste du att den inte är uppbackad av något stort företag? Det tar tid att utveckla den och jag vill hålla den reklamfri, så ditt stöd skulle uppskattas.\n\nDu kan stödja mig genom att köpa betalappen Simple Thank You, genom att skicka pengar via Paypal eller genom att skicka kryptovalutor.\n\nMer info på http://simplemobiletools.com/donate.\n\nTack!</string>
+    <string name="donate_please">Hello,\n\nhope you are enjoying the app. It contains no ads, so please support its development by purchasing the <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a> app, it will also prevent this dialog from showing up again.\n\nYou can find more donating options <a href="http://simplemobiletools.com/donate">here</a>.\n\nThank you!</string>
+    <string name="purchase">Purchase</string>
 
     <!-- License -->
     <string name="notice">Denna app använder följande tredjepartsbibliotek för att göra mitt liv enklare. Tack.</string>
