--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -223,7 +223,8 @@
     <string name="gruveo">Ar ieðkote paprastos ir anonimiðkos vaizdo skambuèiø programos? Pabandykite kità mano projektà</string>
     <string name="app_version">Programos versija: %1$s</string>
     <string name="device_os">Árenginio OS: %1$s</string>
-    <string name="donate_please">Sveiki,\n\natrodo, naudojate ðià programà jau kurá laikà.\n\nAr þinojote, jog ði programa nëra sukurta didelës kompanijos? Programavimas uþima daug laiko ir að noriu programà iðlaikyti be reklamø, todël reikalinga Jûsø parama.\n\nGalite paremti mane ásigydami mokamà programà Simple Thank You, siøsdami pinigus per Paypal sistemà ar siøsdami bitcoin\'us.\n\nDugiau informacijos://simplemobiletools.com/donate.\n\nAèiû!</string>
+    <string name="donate_please">Hello,\n\nhope you are enjoying the app. It contains no ads, so please support its development by purchasing the <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a> app, it will also prevent this dialog from showing up again.\n\nYou can find more donating options <a href="http://simplemobiletools.com/donate">here</a>.\n\nThank you!</string>
+    <string name="purchase">Purchase</string>
 
     <!-- License -->
     <string name="notice">Ði programa naudoja treèiøjø ðaliø licensijas ir padaro mano gyvenimà geresná. Aèiû.</string>
